--- a/src/web/.eslintrc.json
+++ b/src/web/.eslintrc.json
@@ -2,5 +2,10 @@
     "extends": [
         "plugin:prettier/recommended"
     ],
-    "plugins": ["prettier"]
+    "plugins": [
+        "prettier"
+    ],
+    "rules": {
+        "prettier/prettier": "error"
+    }
 }
