--- a/src/web/package.json
+++ b/src/web/package.json
@@ -13,10 +13,10 @@
   "devDependencies": {
     "@types/uuid": "^3.4.5",
     "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-prettier": "file:node_modules/eslint-plugin-prettier",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "parcel-bundler": "^1.12.3",
-    "prettier": "1.18.2",
+    "prettier": "^1.18.2",
     "sass": "^1.23.0",
     "typescript": "^3.7.0-beta"
   },
