--- a/src/web/package.json
+++ b/src/web/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html",
-    "lint": "eslint game.ts"
+    "build": "parcel build index.html",
+    "lint": "eslint game/game.ts"
   },
   "author": "",
   "license": "ISC",
