--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "game",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel src/index.html",
-    "build": "NODE_ENV=production parcel build src/index.html",
-    "lint": "eslint game/game.ts"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.9.4",
-    "@types/uuid": "^3.4.5",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "parcel-bundler": "^1.12.4",
-    "prettier": "^1.18.2",
-    "sass": "^1.23.0",
-    "typescript": "^3.7.0"
-  },
-  "dependencies": {
-    "@reactivex/rxjs": "^6.5.3",
-    "pixi.js": "^5.1.5",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "uuid": "^3.3.3"
-  }
+    "name": "game",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "parcel src/index.html",
+        "build": "NODE_ENV=production parcel build src/index.html",
+        "lint": "eslint game/game.ts"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/react": "^16.9.34",
+        "@types/react-dom": "^16.9.7",
+        "@types/uuid": "^3.4.9",
+        "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-prettier": "^3.1.3",
+        "parcel-bundler": "^1.12.4",
+        "prettier": "^1.19.1",
+        "sass": "^1.26.5",
+        "typescript": "^3.8.3"
+    },
+    "dependencies": {
+        "@reactivex/rxjs": "^6.5.5",
+        "@types/node": "^13.13.4",
+        "pixi.js": "^5.2.3",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "uuid": "^3.4.0"
+    }
 }
