--- a/package.json
+++ b/package.json
@@ -12,23 +12,24 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@types/react": "^16.9.34",
-        "@types/react-dom": "^16.9.7",
-        "@types/uuid": "^3.4.9",
-        "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-prettier": "^3.1.3",
+        "@types/react": "^17.0.3",
+        "@types/react-dom": "^17.0.2",
+        "@types/uuid": "^8.3.0",
+        "eslint": "^7.22.0",
+        "eslint-config-prettier": "^8.1.0",
+        "eslint-plugin-prettier": "^3.3.1",
         "parcel-bundler": "^1.12.4",
-        "prettier": "^1.19.1",
-        "sass": "^1.26.5",
-        "typescript": "^3.8.3"
+        "prettier": "^2.2.1",
+        "sass": "^1.32.8",
+        "typescript": "^4.2.3"
     },
     "dependencies": {
-        "@reactivex/rxjs": "^6.5.5",
-        "@types/node": "^13.13.4",
-        "pixi.js": "^5.2.3",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "uuid": "^3.4.0"
+        "@reactivex/rxjs": "^6.6.6",
+        "@types/node": "^14.14.35",
+        "pixi.js": "^6.0.0",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "rxjs": "^6.6.6",
+        "uuid": "^8.3.2"
     }
 }
