--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "rxjs": "^6.6.6",
+        "spatial-hashmap": "^1.0.4",
         "uuid": "^8.3.2"
     }
 }
