--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/matter-js": "^0.14.11",
+        "@types/node": "^14.14.35",
         "@babel/preset-typescript": "^7.13.0",
         "@types/jest": "^26.0.21",
         "@types/react": "^17.0.3",
@@ -28,7 +30,7 @@
     },
     "dependencies": {
         "@reactivex/rxjs": "^6.6.6",
-        "@types/node": "^14.14.35",
+        "matter-js": "^0.16.1",
         "pixi.js": "^6.0.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
